# app-deconfliction

./: .gitignore  README.md  pyproject.toml  requirements.txt
competing-apps/: README.md  run-deconfliction.sh
competing-apps/app-deconflictor/: app-deconflictor.py  compromise-method.py  deconfliction-pipeline.py  resilience-method.py  run-deconflictor.sh
competing-apps/competing-app/: competing-app.py  compromise-app.py  compromise.sh  decarbonization-app.py  decarbonization.sh  old-competing-app.py  profit-app.py  profit.sh  pseudo-sim.py  resilience-app.py  resiliency.sh  run-competing.sh  run-compromise.sh  run-decarbonization.sh  run-profit.sh  run-resilience.sh  time-series-data.csv
competing-apps/competing-optimization-apps/: apps.py  competing-app-DM.py  competing-app-GT.py  competing-app-MCDM.py  competing-app.py  indent.py  main.py  optimization-app.py  plot_results.py  resilience-app.py  run-competing.sh  run-decarbonization.sh  run-loadshed.sh  run-profit.sh  run-resilience.sh
competing-apps/competing-workflow-apps/: decarbonization-app.py  old-compromise-app.py  old-profit-app.py  resilience-app.py  run-compromise.sh  run-resilience.sh
competing-apps/deconfliction-methods/: compromise-rd-method.py  compromise-rd-partial-method.py  compromise-rdp-full-method.py  compromise-rdp-method.py  compromise-rdp-partial-method.py  exclusivity-d-full-method.py  (+6 more)
sandbox/: Process_results.m  competing_apps.py  competing_apps_old.py  sandbox_solution.py  sandbox_solution_no_block.py
service/: README.md  run-deconfliction-gld.sh  run-deconfliction.sh
(+704 files in other folders)
