[tool.poetry]
name = "app-deconfliction"
version = "0.1.0"
description = ""
authors = ["afisher1 <4552674+afisher1@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
opendssdirect-py = {extras = ["extras"], version = "^0.9"}
gridappsd-python = "^2024"
pulp = "^2.7.0"
tabulate = "^0.9.0"
cim-graph = "^0.1.5a0"
gridappsd-field-bus = "^2024"
cvxpy = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
